@@ -204,7 +204,7 @@ short DoBloodSplat(int x, int y, int z, short speed, short yRot, short roomNumbe
 void DoLotsOfBlood(int x, int y, int z, int speed, short direction, short roomNumber, int count);
 void TriggerUnderwaterBlood(int x, int y, int z, int sizeme);
 void ControlWaterfallMist(short itemNumber);
-void TriggerWaterfallMist(int x, int y, int z, int angle);
+void TriggerWaterfallMist(Vector3i pos, Vector4 color, int width, int size, short angle);
 void KillAllCurrentItems(short itemNumber);
 void TriggerDynamicLight(int x, int y, int z, short falloff, byte r, byte g, byte b);
 void TriggerRocketFlame(int x, int y, int z, int xv, int yv, int zv, int itemNumber);
