@@ -3,10 +3,11 @@ Version 1.0.3
 
 * Add ledge jumps (Lara object must be updated with new animations to make it work).
 * Add FlipMap and PlayFlyBy script commands and node functions.
-* Add OCB 1 for rollingball to make it silent.
 * Add FlyCheat option to gameflow script for disabling dozy mode.
 * Add SetNumberOfSecrets option to gameflow script to set overall amount of secrets.
+* Add OCB 1 for rollingball to make it silent.
 * Adjust sprint jump timing.
+* Customize waterfall mist colour and OCB (XXYY, where XX is width, and YY is size).
 * Implement sprite instancing to speed up rendering.
 * Merge portals at runtime to speed up rendering.
 * Enable dynamic lights for swarm enemies (beetles, rats and bats).
